--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,25 +5,19 @@
     <p
       class="text-muted-foreground text-center text-sm leading-loose md:text-left"
     >
-      Built by{' '}
+      Built by
       <a
         href="https://github.com/AREA44"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
-      >
-        AREA44
-      </a>
-      . The source code is available on{' '}
+      >AREA44</a>. The source code is available on
       <a
         href="https://github.com/AREA44/astro-shadcn-ui-template"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
-      >
-        GitHub
-      </a>
-      .
+      >GitHub</a>.
     </p>
   </div>
 </footer>
